--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.2",
   "repository": {
 		"type": "git",
-		"url": "https://github.com/ViniciusTxc3/arduino-snippets"
+		"url": "https://github.com/ronaldosea/arduino-snippets, https://github.com/ViniciusTxc3/arduino-snippets"
 	},
   "publisher": "ronaldosena, ViniciusTeixeira",
   "engines": {
